# SearchServer

./: .gitattributes  CMakeLists.txt  README.md
cmake/: CompilerSettings.cmake  ProjectBoost.cmake  ProjectFaiss.cmake  ProjectPistache.cmake
docker/: Dockerfile  README.md
docs/: .Doxyfile.in  Code-Style.md  UserManual.md  config.md
scripts/: README.md  git-lfs.deb.sh  install.sh  install_cuda.sh  install_deps.sh  monitor.sh  pack.sh
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  configParams.cpp  configParams.h  easylog++.h  easylogging++.cpp  error.h  memusage.h  version.h
src/libRestServer/: CMakeLists.txt  RequestHandler.cpp  RequestHandler.h  RestServer.cpp  RestServer.h  SearchProcessor.cpp  SearchProcessor.h
src/libSearch/: CMakeLists.txt  FaissInterface.cpp  FaissInterface.h
test/: CMakeLists.txt  FaissCPUSearch.cpp  FaissGPUSearch.cpp  FaissLoadTest.cpp  HNSWSearch.cpp  sift1M.cpp  testRemove.cpp  testSearchRange.cpp
test/python-test/: add.py  query.py  queryRange.py  querydays.py  reconfig.py  remove.py  removeRange.py
